# VulkanExamples

./: CMakeLists.txt  README.md  main.cpp
cmake/: log.cmake  shaders.cmake
examples/: blank_window.cpp  blank_window.h  examples.h  sierpinski_triangle.cpp  sierpinski_triangle.h  static_triangle.cpp  static_triangle.h
examples/blank_window/: blank_window.cpp
examples/sierpinski_triangle/: temp.txt
examples/triangle/: triangle.cpp
libs/dev/: out.h  rei.h
libs/engine/: device.cpp  device.h  model.cpp  model.h  pipeline.cpp  pipeline.h  swap_chain.cpp  swap_chain.h
libs/file/: read.cpp  read.h
libs/gui/: app.cpp  app.h  window.cpp  window.h
shaders/: sierpinski_triangle.frag  static_triangle.frag  static_triangle.vert
